Fix to align notion icon wrapper to left

--- a/styles/notion-custom.css
+++ b/styles/notion-custom.css
@@ -1,3 +1,8 @@
 .notion {
   font-size: 18px;
 }
+
+.notion-page-icon-wrapper {
+  left: inherit;
+  display: block;
+}
